# nervusdb

./: .gitignore  .gitmodules  .lintstaged.cjs  .rustfmt.toml  CHANGELOG.md  COMMERCIAL_LICENSE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  build.config.mjs  eslint.config.js  nervusdb-Architecture-crosscheck.md  nervusdb-Architecture.md  package.json  pnpm-lock.yaml  tmp_gql_filter_debug.ts  tmp_gql_parse_debug.ts  tmp_graphql_debug.ts  tmp_introspect_parseFields.ts  tsconfig.build.json  vitest.config.ts
.cargo/: config.toml
.cursor/rules/: base.mdc
.github/: pull_request_template.md
.github/workflows/: ci-daily-snapshot.yml  ci.yml  (+6 more)
.husky/: pre-commit  pre-push
docs/: BUILD.md  CONFIG_CHANGES_2025-11-07.md  CYPHER_FEATURE_AUDIT.md  PERFORMANCE_ANALYSIS.md  QUALITY_GATES.md  WASM_IMPLEMENTATION_PLAN.md  WASM_PERFORMANCE_REPORT.md  architecture-progress-review-2026-02-13.md  binding-parity-matrix.md  task_progress.md  tasks.md  企业版规划.md  文档导航.md  新用户指南.md
examples-test/: .gitignore  capability-contract.yaml  run_all.sh
examples-test/nervusdb-rust-test/: CAPABILITY-REPORT.md  Cargo.toml  run_test.sh
examples-test/nervusdb-rust-test/tests/: test_capabilities.rs
nervusdb-capi/: Cargo.toml  build.rs  cbindgen.toml
nervusdb-capi/src/: lib.rs
nervusdb-capi/tests/: capi_smoke.rs
nervusdb-cli/: Cargo.toml
nervusdb-core/: Cargo.toml
nervusdb-node/: Cargo.toml  index.d.ts
nervusdb-node/src/: lib.rs
nervusdb-pyo3/: Cargo.toml  README.md  pyproject.toml
nervusdb-pyo3/src/: db.rs  lib.rs  txn.rs  types.rs
nervusdb-pyo3/tests/: test_basic.py  test_vector.py
nervusdb-temporal/: Cargo.toml
nervusdb-v2/: Cargo.toml
nervusdb-v2-query/: Cargo.toml
nervusdb-v2-storage/: Cargo.toml
nervusdb-wasm/: Cargo.toml
scripts/: abi_binding_dep_gate.sh  beta_release_gate.sh  binding_parity_gate.sh  chaos_io_gate.sh  contract_smoke.sh  examples_smoke.sh  memory-leak-analysis.mjs  parity_coverage_audit.sh  parity_softgate_audit.sh  release.sh  runtime_guard_audit.sh  soak_stability.sh  stability_window.sh
src/: coreSynapseDb.ts  index.ts  synapseDb.ts  typedNervusDb.ts  typedSynapseDb.ts
tests/: astar_path.test.ts  cypher_basic.test.ts  cypher_optimization.test.ts  gremlin_basic.test.ts  gremlin_integration.test.ts  manifest_atomic_update.test.ts  property_index_performance.test.ts  query_snapshot_isolation.test.ts  wasm-stress.test.ts
(+590 files in other folders)
