[package]
name = "nervusdb-capi"
version = "1.0.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "Stable public C ABI for NervusDB"

[lib]
name = "nervusdb"
crate-type = ["cdylib", "rlib"]

[dependencies]
nervusdb-core = { package = "nervusdb", path = "../nervusdb" }
nervusdb-query = { path = "../nervusdb-query" }
serde_json = "1.0"

[build-dependencies]
cbindgen = "0.28"

[dev-dependencies]
tempfile = "3"
