[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nervusdb"
version = "2.0.0"
description = "An embeddable property graph database written in Rust"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
]
keywords = ["graph", "database", "embedded", "cypher", "rust"]

[project.urls]
Homepage = "https://github.com/LuQing-Studio/nervusdb"
Repository = "https://github.com/LuQing-Studio/nervusdb"

[tool.maturin]
features = ["pyo3/extension-module"]
